<resources>
    <string name="app_name">LoginAndRegister</string>
    <string name="User">Username:</string>
    <string name="Pass">Password:</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Forgot">Forgot you password?</string>
    <string name="UserHint">Your Username</string>
    <string name="PassHint">Your Password</string>
</resources>